# maptitude

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  pyproject.toml  tasks.py  vrzn.toml
.github/workflows/: build-wheels.yml
benchmarks/: bench_accuracy.py  bench_fc_density.py  bench_scoring.py  helpers.py  run_all.py
cmake/: FindFFTW3.cmake  FindOpenEye.cmake
include/maptitude/: CoverageOptions.h  DensityCalculator.h  DensityScoreResult.h  Error.h  Grid.h  GridOps.h  Metric.h  QScoreOptions.h  RSCCOptions.h  Residue.h  RsccOptions.h  RsrOptions.h  ScatteringFactors.h  SpatialIndex.h  SymOp.h  UnitCell.h  maptitude.h
include/maptitude/detail/: ScoringHelpers.h
python/: pyproject.toml
python/maptitude/: __init__.py  maptitude.py
scripts/: build_python.py  version.py
src/: DensityCalculator.cpp  DensityScoreResult.cpp  Grid.cpp  GridOps.cpp  Metric.cpp  Residue.cpp  ScatteringFactors.cpp  SpatialIndex.cpp  SymOp.cpp  UnitCell.cpp
swig/: CMakeLists.txt  maptitude.i
tests/: CMakeLists.txt
tests/assets/mapq/: 1d26.cif  1d26_2fofc.ccp4  340d.cif  340d_2fofc.ccp4  3q9g.cif  3q9g_2fofc.ccp4
tests/cpp/: CMakeLists.txt  test_density_score_result.cpp  test_grid_ops.cpp  test_residue.cpp  test_scattering_factors.cpp  test_scoring_helpers.cpp  test_spatial_index.cpp  test_symop.cpp  test_unit_cell.cpp
tests/python/: conftest.py  test_maptitude.py  test_package_imports.py  test_validation.py
