[build-system]
requires = ["scikit-build-core>=0.8", "swig>=4.0"]
build-backend = "scikit_build_core.build"

[project]
name = "maptitude"
version = "0.1.5"
description = "High-performance crystallographic electron density computation and scoring"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["crystallography", "electron-density", "scoring", "openeye", "structural-biology"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.10"
dependencies = ["openeye-toolkits>=2025.2"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "vrzn>=0.1.0"]

[tool.scikit-build]
cmake.version = ">=3.21"
cmake.build-type = "Release"
build.targets = ["maptitude_python"]
build-dir = "build/{wheel_tag}"
wheel.install-dir = "."
wheel.py-api = "cp310"
wheel.exclude = ["**.pyc", "**/__pycache__", "*.a", "CMakeFiles/**"]
logging.level = "INFO"
strict-config = false

[tool.scikit-build.cmake.define]
MAPTITUDE_BUILD_TESTS = "OFF"
MAPTITUDE_BUILD_PYTHON = "ON"
OPENEYE_USE_SHARED = "ON"
MAPTITUDE_USE_STABLE_ABI = "ON"
MAPTITUDE_UNIVERSAL2 = "ON"

[tool.pytest.ini_options]
testpaths = ["tests/python"]
python_files = ["test_*.py"]
addopts = "-v"

[tool.oe-build]
package-name = "maptitude"
cmake-test-flag = "MAPTITUDE_BUILD_TESTS"
rpath-strategy = "platform"
expected-missing-libs = [
    "liboechem", "liboesystem", "liboeplatform",
    "liboemath", "libzstd", "liboegrid", "liboefizzchem",
    "liboegraphsim", "liboeshape", "liboeff",
    "liboespicoli", "liboezap", "liboequacpac",
    "liboedepict", "liboegrapheme", "liboemolprop",
    "liboeiupac", "liboefastrocs",
]

[tool.oe-build.extra-cmake-defines]
